# docs/swagger.json
@@ -9,42 +9,9 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/auth/create_user": {
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "user"
-                ],
-                "summary": "CreateNewUser",
-                "operationId": "create-account",
-                "parameters": [
-                    {
-                        "description": "account info",
-                        "name": "input",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.User"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                }
-            }
-        },
         "/auth/login": {
             "post": {
+                "description": "`Аутентификация пользователя в систему.`",
                 "consumes": [
                     "application/json"
                 ],
@@ -52,7 +19,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "user"
+                    "Auth"
                 ],
                 "summary": "login user",
                 "operationId": "login",
@@ -63,7 +30,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/handler.signInInput"
                         }
                     }
                 ],
@@ -112,6 +79,41 @@
                 }
             }
         },
+        "/auth/sign_up": {
+            "post": {
+                "description": "`Регистрация пользователя в систему.`",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "CreateNewUser",
+                "operationId": "create-account",
+                "parameters": [
+                    {
+                        "description": "account info",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.User"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                }
+            }
+        },
         "/auth/users": {
             "get": {
                 "consumes": [
@@ -121,7 +123,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "user"
+                    "Auth"
                 ],
                 "summary": "GetAllUser получение список пользователей",
                 "responses": {
@@ -181,7 +183,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "user"
+                    "Auth"
                 ],
                 "summary": "GetUser получение пользователя по идентификатору",
                 "parameters": [
@@ -439,6 +441,21 @@
         }
     },
     "definitions": {
+        "handler.signInInput": {
+            "type": "object",
+            "required": [
+                "login",
+                "password"
+            ],
+            "properties": {
+                "login": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
         "models.AuthLoginResponse": {
             "type": "object",
             "properties": {
@@ -493,7 +510,8 @@
             "type": "object",
             "required": [
                 "email",
-                "login"
+                "login",
+                "password"
             ],
             "properties": {
                 "email": {
@@ -509,6 +527,9 @@
                     "type": "string",
                     "maxLength": 20,
                     "minLength": 3
+                },
+                "password": {
+                    "type": "string"
                 }
             }
         }
